Make add to cart button interactive

--- a/amazon.html
+++ b/amazon.html
@@ -143,7 +143,7 @@
 
           <div class="added-to-cart">
             <img src="images/icons/checkmark.png">
-            Added
+            Addeds
           </div>
 
           <button class="add-to-cart-button button-primary">
@@ -201,6 +201,8 @@
         </div>
       </div>
     </div>
+    <script src="data/cart.js"></script>
+    <script src="data/products.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
 </html>
